<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".MainActivity"
   >
    <android.support.v4.view.ViewPager
    android:id="@+id/viewpager"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    </android.support.v4.view.ViewPager>

    <!-- 底部导航栏-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        >
        <LinearLayout
            android:id="@+id/id_tabMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:orientation="vertical"
            android:layout_marginEnd="1sp"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            >
        <ImageView android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/leadmained">

        </ImageView>
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/LeadMain"
            android:textSize="20sp"
            android:textColor="@android:color/white">
        </TextView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/id_tabFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:orientation="vertical"
            android:layout_marginEnd="1sp"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            >
            <ImageView android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/leadfriended">

            </ImageView>
            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/LeadFriend"
                android:textSize="20sp"
                android:textColor="@android:color/white">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tabTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:layout_marginEnd="1sp"
            android:layout_marginRight="1sp"
            android:orientation="vertical"
            android:layout_weight="1"

            >
            <ImageView android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/leadruned">

            </ImageView>
            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/LeadTotal"
                android:textSize="20sp"
                android:textColor="@android:color/white">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tabAderss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/holo_red_dark"
            android:layout_marginEnd="1sp"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            >
            <ImageView android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/leadadessed">

            </ImageView>
            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/LeadAdess"
                android:textSize="20sp"
                android:textColor="@android:color/white">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tabSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/holo_red_dark"
            android:layout_weight="1"
            >
            <ImageView android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/leadsettinged">

            </ImageView>
            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/LeadSetting"
                android:textSize="20sp"
                android:textColor="@android:color/white">
            </TextView>
        </LinearLayout>



        </LinearLayout>
</RelativeLayout>
